producer and flavor_profile populator tasks and some more controller setup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,9 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-
-<%= yield %>
+<body ng-app>
+  Angular sanity check: {{ 1 + 2 }}
+  <div ng-view></div>
 
 </body>
 </html>
