add angular app, app_controller, app_router

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
-<body ng-app>
+<body ng-app="ScotchApp">
   Angular sanity check: {{ 1 + 2 }}
   <div ng-view></div>
 
