--- a/app/views/sites_templates/index.html.erb
+++ b/app/views/sites_templates/index.html.erb
@@ -1,2 +1,4 @@
 <h1>SitesTemplates#index</h1>
-<p>Find me in app/views/sites_templates/index.html.erb</p>
+<ul>
+  <li ng-repeat="whisky in app.whiskies">{{whisky.name}}</li>
+</ul>
