--- a/app/views/sites_templates/index.html.erb
+++ b/app/views/sites_templates/index.html.erb
@@ -1,4 +1,6 @@
 <h1>SitesTemplates#index</h1>
+<p>this is the sites template</p>
+<p>{{app.greeting}}</p>
 <ul>
   <li ng-repeat="whisky in app.whiskies">{{whisky.name}}</li>
 </ul>
