--- a/app/views/sites_templates/index.html.erb
+++ b/app/views/sites_templates/index.html.erb
@@ -1,10 +1,42 @@
-<h1>SitesTemplates#index</h1>
-<p>{{app.greeting}}</p>
-<ul>
-  <li ng-repeat="whisky in app.whiskies | limitTo: 10 | orderBy: '-rating'">
-    <h4>{{whisky.name}}</h4>
-    <p>Rating: {{whisky.rating}}</p>
-    <p>Price: ${{whisky.price}}</p>
-    <p>Age: {{whisky.age}}</p>
-  </li>
-</ul>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>SitesTemplates#index</h1>
+
+      <div class="regions" ng-controller="RegionsCtrl">
+        <div ng-repeat="region in regions">
+          <h3>{{region.name}}</h3>
+          <div>{{region.description}}</div>
+        </div>
+      </div>
+    </div><!-- /.col -->
+  </div><!-- /.row -->
+
+
+<div class="btn-group">
+  <label class="btn btn-primary" ng-click="results.getAllWhiskies()" ng-model="results.sortBy" btn-radio="'-price'" uncheckable>Most Expensive</label>
+  <label class="btn btn-primary" ng-click="results.getAllWhiskies()" ng-model="results.sortBy" btn-radio="'-rating'" uncheckable>Highest Rated</label>
+</div>
+
+<button>Show Graph</button>
+
+<div class="results-filters">
+
+</div>
+<table class="table table-hover">
+  <thead>
+    <th>Name</th>
+    <th>Rating</th>
+    <th>Price</th>
+  </thead>
+  <tbody>
+    <tr ng-repeat="whisky in results.whiskies | limitTo: 10 | offset: results.currentPage | orderBy: results.sortBy">
+      <td><a href="/whiskies/{{whisky.id}}">{{whisky.name}}</a></td>
+      <td>{{whisky.rating}}</td>
+      <td>{{whisky.price | currency}}</td>
+    </tr>
+  </tbody>
+</table>
+<pagination total-items="results.whiskies.length" ng-model="results.currentPage" max-size="10" class="pagination-sm" boundary-links="true" rotate="false" num-pages="numPages" ng-change="results.setPage(results.currentPage)"></pagination>
+
+</div><!-- /.container -->
