--- a/app/views/sites_templates/index.html.erb
+++ b/app/views/sites_templates/index.html.erb
@@ -3,40 +3,46 @@
     <div class="col-sm-12">
       <h1>SitesTemplates#index</h1>
 
-      <div class="regions" ng-controller="RegionsCtrl">
-        <div ng-repeat="region in regions">
+      <div class="regions map" ng-controller="RegionsCtrl">
+        <div ng-repeat="region in regions" class="{{region.name}}">
           <h3>{{region.name}}</h3>
-          <div>{{region.description}}</div>
+          <div ng-include="'/images/' + region.name + '.svg'" ng-click="results.getRegionWhiskies(region.id)" class="region-img"></div>
+          <div class="overlay overlay-{{region.name}}" ng-show="results.showRegionDesc[{{region.id}}]" ng-click="results.hideRegionDescModal()">{{region.description}}</div>
         </div>
       </div>
     </div><!-- /.col -->
   </div><!-- /.row -->
 
+<div class="row">
+  <div class="col-sm-12">
+    <div class="btn-group">
+      <label class="btn btn-primary" ng-model="results.sortBy" btn-radio="'-price'" uncheckable>Most Expensive</label>
+      <label class="btn btn-primary" ng-model="results.sortBy" btn-radio="'-rating'" uncheckable>Highest Rated</label>
+    </div>
 
-<div class="btn-group">
-  <label class="btn btn-primary" ng-click="results.getAllWhiskies()" ng-model="results.sortBy" btn-radio="'-price'" uncheckable>Most Expensive</label>
-  <label class="btn btn-primary" ng-click="results.getAllWhiskies()" ng-model="results.sortBy" btn-radio="'-rating'" uncheckable>Highest Rated</label>
-</div>
+    <button class="btn btn-default pull-right" ng-model="results.showChart" btn-radio="'true'" uncheckable>Show Graph</button>
+    <div ng-show="results.showChart">
+      <div bubble-chart bubble-data="results.whiskies"></div>
+    </div>
 
-<button>Show Graph</button>
+    <div class="results-filters">
 
-<div class="results-filters">
-
-</div>
-<table class="table table-hover">
-  <thead>
-    <th>Name</th>
-    <th>Rating</th>
-    <th>Price</th>
-  </thead>
-  <tbody>
-    <tr ng-repeat="whisky in results.whiskies | limitTo: 10 | offset: results.currentPage | orderBy: results.sortBy">
-      <td><a href="/whiskies/{{whisky.id}}">{{whisky.name}}</a></td>
-      <td>{{whisky.rating}}</td>
-      <td>{{whisky.price | currency}}</td>
-    </tr>
-  </tbody>
-</table>
-<pagination total-items="results.whiskies.length" ng-model="results.currentPage" max-size="10" class="pagination-sm" boundary-links="true" rotate="false" num-pages="numPages" ng-change="results.setPage(results.currentPage)"></pagination>
-
+    </div>
+    <table class="table table-hover">
+      <thead>
+        <th>Name</th>
+        <th>Rating</th>
+        <th>Price</th>
+      </thead>
+      <tbody>
+        <tr ng-repeat="whisky in results.whiskies | limitTo: 10 | offset: results.currentPage | orderBy: results.sortBy">
+          <td><a href="/whiskies/{{whisky.id}}">{{whisky.name}}</a></td>
+          <td>{{whisky.rating}}</td>
+          <td>{{whisky.price | currency}}</td>
+        </tr>
+      </tbody>
+    </table>
+    <pagination total-items="results.whiskies.length" ng-model="results.currentPage" max-size="10" class="pagination-sm" boundary-links="true" rotate="false" num-pages="numPages" ng-change="results.setPage(results.currentPage)"></pagination>
+    </div><!-- /.col -->
+  </div><!-- /.row -->
 </div><!-- /.container -->
