--- a/app/assets/templates/whisky_show.html
+++ b/app/assets/templates/whisky_show.html
@@ -1,2 +1,30 @@
+<h1>ANYTHING HERE?</h1>
+<div class="row">
+  <div class="col-sm-12">
+    <button class="btn btn-default">Back to Search</button>
+  </div>
+</div><!-- /.row -->
 
-
+<div class="row">
+  <div class="col-sm-6">
+    <div ng-controller="ShowWhiskyCtrl">
+      <h1>Whisky show in public</h1>
+      <div class="info">
+        <h2>{{whisky.name}}</h2>
+        <p>Producer: {{whisky.producer.name}}</p>
+        <p>Region: {{whisky.region.name}}</p>
+        <p>
+          <span class="rating">Rating: {{whisky.rating}}</span> |
+          <span class="age">Age: {{whisky.age}}</span>
+        </p>
+        <button class="btn btn-default">Add to favorites</button>
+      </div>
+    </div>
+  </div><!-- /.col -->
+  <div class="col-sm-6 flavor-profile">
+    <h3>Flavor Profiles</h3>
+    <div ng-repeat="(key, val) in whisky.flavor_profiles">
+      <div>{{key}}: {{val}}</div>
+    </div>
+  </div>
+</div><!-- /.row -->
