--- a/app/assets/stylesheets/whisky_templates.css.scss
+++ b/app/assets/stylesheets/whisky_templates.css.scss
@@ -4,7 +4,7 @@
 
 .chart-wrapper {
   width: 800px;
-  height: 520px;
+  // height: 520px;
   overflow: hidden;
   background: #ccc;
   border-radius: 4px;
