--- a/app/assets/stylesheets/producer_templates.css.scss
+++ b/app/assets/stylesheets/producer_templates.css.scss
@@ -1,3 +1,121 @@
 // Place all the styles related to the producer_templates controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$orange: orange;
+$trans-white: white;
+// -- Whisky Profile Show --
+.producer-img-wrapper {
+  overflow: hidden;
+  .producer-img {
+    width: 150px;
+  }
+}
+html .flavor-graph {
+  color: none;
+}
+
+.flavor-graph {
+  width: 100px;
+  text-align: center;
+  position: relative;
+  height: 450px;
+  text-align: center;
+  position: relative;
+  margin:0 20%;
+  margin-top: -50px;
+  color: white;
+}
+.drop {
+  background: $orange;
+  opacity: .75;
+  height: 20px;
+  width: 20px;
+  border-radius: 100%;
+  margin: 0 auto;
+  margin-top: -10px;
+  padding-top: .75em;
+  position: absolute;
+  top: 0;
+  transition: all 2s ease;
+  -webkit-transition: all 2s ease;
+  -moz-transition: all 2s ease;
+  -ms-transtion: all 2s ease;
+  .dataLabel {
+    position: relative;
+    display: block;
+    margin-left: 100px;
+    margin-top: -18px;
+    opacity: 0;
+    color: white;
+    transition: all 2.3s ease;
+    -webkit-transition: all 4.3s ease;
+    -moz-transition: all 2.3s ease;
+    -ms-transtion: all 2.3s ease;
+    &::before {
+      content:'';
+      position: absolute;
+      border-top: $trans-white;
+      width: 30px;
+      height: 1px;
+      left: -40px;
+      top: 10px;
+      background: $trans-white;
+    }
+  }
+  .dataValue {
+    opacity: 0;
+    color: white;
+    transition: all 2.3s ease;
+    -webkit-transition: all 2.3s ease;
+    -moz-transition: all 2.3s ease;
+    -ms-transtion: all 2.3s ease;
+  }
+  &.drop0 {
+    display: none;
+  }
+  &.drop1 {
+    padding: 0;
+    top: 40px;
+    left: 40px;
+    .dataLabel {
+      margin-left: 90px;
+    }
+  }
+  &.drop2 {
+    height: 40px;
+    width: 40px;
+    top: 30px;
+    left: 30px;
+    .dataLabel {
+
+    }
+  }
+  &.drop3 {
+    height: 60px;
+    width: 60px;
+    top: 20px;
+    left: 20px;
+    .dataLabel {
+      margin-left: 110px;
+    }
+  }
+  &.drop4 {
+    height: 80px;
+    width: 80px;
+    top: 10px;
+    left: 10px;
+    padding: 2em;
+    .dataLabel {
+      margin-left:90px;
+    }
+  }
+  &.drop5 {
+    height: 100px;
+    width: 100px;
+    top: 0;
+    .dataLabel {
+    }
+  }
+
+}
