--- a/app/views/whisky_templates/show.html.erb
+++ b/app/views/whisky_templates/show.html.erb
@@ -1,29 +1,52 @@
-<div class="row">
-  <div class="col-sm-12">
-    <button class="btn btn-default">Back to Search</button>
-  </div>
-</div><!-- /.row -->
+<div class="container-fluid" ng-controller="ShowWhiskyCtrl">
+  <div class="row">
+    <div class="col-sm-12">
+      <a class="btn btn-default" href="/">Back to Search</a>
+    </div>
+  </div><!-- /.row -->
 
-<div class="row">
-  <div class="col-sm-6">
-    <div ng-controller="ShowWhiskyCtrl">
-      <h1>Whisky show in public</h1>
-      <div class="info">
-        <h2>{{whisky.name}}</h2>
-        <p>Producer: {{whisky.producer.name}}</p>
-        <p>Region: {{whisky.region.name}}</p>
-        <p>
-          <span class="rating">Rating: {{whisky.rating}}</span> |
-          <span class="age">Age: {{whisky.age}}</span>
-        </p>
-        <button class="btn btn-default">Add to favorites</button>
+  <div class="row">
+    <div class="col-sm-6">
+      <div>
+        <h1>Whisky show in public</h1>
+        <div class="info">
+          <h2>{{whisky.name}}</h2>
+          <p>Producer: {{whisky.producer.name}}</p>
+          <p>Region: {{whisky.region.name}}</p>
+          <p>
+            <span class="rating">Rating: {{whisky.rating}}</span> |
+            <span class="age">Age: {{whisky.age}}</span>
+          </p>
+          <button class="btn btn-default">Add to favorites</button>
+        </div>
       </div>
+    </div><!-- /.col -->
+    <div class="col-sm-6 flavor-profile">
     </div>
-  </div><!-- /.col -->
-  <div class="col-sm-6 flavor-profile">
-    <h3>Flavor Profiles</h3>
-    <div ng-repeat="(key, val) in whisky.flavor_profiles">
-      <div>{{key}}: {{val}}</div>
-    </div>
-  </div>
-</div><!-- /.row -->
+  </div><!-- /.row -->
+
+  <div class="row">
+    <div class="col-sm-12">
+      <table class="table table-hover">
+        <thead>
+          <th>Region</th>
+          <th>Producer</th>
+          <th>Name</th>
+          <th>Seller</th>
+          <th>Price</th>
+        </thead>
+        <tbody>
+          <!--  -->
+          <tr ng-repeat="deal in deals | filterNullPrice">
+            <td>{{whisky.region.name}}</td>
+            <td>{{deal.brand}}</td>
+            <td><a href="{{deal.sitedetails[0].url}}">{{deal.name}}</a></td>
+            <td>{{deal.sitedetails[0].name}}</td>
+            <td>${{deal.sitedetails[0].latestoffers[0].price}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div><!-- /.col -->
+  </div> <!-- /.row -->
+
+</div><!-- /.container -->
