--- a/app/assets/stylesheets/whisky_templates.css.scss
+++ b/app/assets/stylesheets/whisky_templates.css.scss
@@ -2,11 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+$spray: rgba(129, 207, 224, 1.0);
+$wax: rgba(241, 169, 160, 1.0);
+$superlime: rgba(200, 247, 197, 1.0);
+$curious-blue: rgba(52, 152, 219, 1.0);
+$ebony: rgba(34, 49, 63, 1.0);
+$body: rgba(255, 236, 219, 1.0);
+
 .chart-wrapper {
   width: 800px;
   // height: 520px;
   overflow: hidden;
-  background: #ccc;
+  background: rgba($body, 0.8);
   border-radius: 4px;
   box-shadow: 1px 1px 3px #999;
   position: absolute;
@@ -25,12 +32,18 @@
     top: 0;
     background:#34495E;
     color: white;
-    padding: 2em;
     transition: all 0.5s ease;
     font-size: 12px;
     a.sidebar {
       display: block;
-      margin-bottom: 1em;
+      padding: 1em;
+      border-bottom: 1px solid rgba($spray, 0.15);
+      color: $spray;
+      &:hover {
+        background: rgba($spray, 0.15);
+        color: darken($spray, 10%);
+        text-decoration: none;
+      }
     }
   }
 }
