--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,15 @@
 <html>
 <head>
   <title>Scotch2</title>
+  <link href='http://fonts.googleapis.com/css?family=Arimo:400,700,400italic|Racing+Sans+One' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body ng-app="ScotchApp">
-  <%= render "sites/nav" %>
+  <div ng-controller="MainCtrl">
+    <%= render "sites/nav" %>
   <div ng-view></div>
-
+  </div>
 </body>
 </html>
