--- a/app/views/producer_templates/show.html.erb
+++ b/app/views/producer_templates/show.html.erb
@@ -1,11 +1,7 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-12">
-      <a class="btn btn-default" href="/">Back to list</a>
-    </div>
-  </div>
-  <div class="row">
+  <div class="row profile-upper">
     <div class="col-sm-4 info">
+      <a class="btn btn-default" href="/">&laquo; Back to list</a>
       <div class="producer-image-wrapper">
         <img src="{{producer.image_url}}" alt="{{producer.name}}">
       </div>
