styling to modules

--- a/app/assets/stylesheets/regions.css.scss
+++ b/app/assets/stylesheets/regions.css.scss
@@ -14,6 +14,8 @@ $water: rgba(34, 167, 240, 1.0);
     text-align: center;
     color: white;
     position: relative;
+    padding: 1em;
+    border-radius: 0 0 10px 10px;
     .Speyside {
       position: absolute;
       top: 15%;
