--- a/app/assets/stylesheets/whisky_templates.css.scss
+++ b/app/assets/stylesheets/whisky_templates.css.scss
@@ -68,7 +68,12 @@ $body: rgba(255, 236, 219, 1.0);
   color: yellow;
 }
 
-
+.data-table {
+  background: white;
+  padding: 1em;
+  border-radius: 10px;
+  border: 1px solid rgba($wax, 0.25);
+}
 
 
 
