--- a/app/assets/stylesheets/producer_templates.css.scss
+++ b/app/assets/stylesheets/producer_templates.css.scss
@@ -13,17 +13,23 @@ $body: rgba(255, 236, 219, 1.0);
 
 // -- Whisky Profile Show --
 
-.row.profile-upper {
-  background: $curious-blue;
+
+.profile-buttons {
+  width: 100%;
+  padding: 1em;
+  background: lighten($ebony, 30%);
 }
 .info {
   background: lighten($ebony, 10%) ;
-  padding: 1em;
-  border-radius: 0 0 10px 0;
+  padding: 0;
+  border-radius: 0 0 10px 10px;
   color: lighten($curious-blue, 30%);
   h2 {
     margin-top: 0;
   }
+}
+.info-text {
+  padding: 1em;
 }
 .producer-img-wrapper {
   overflow: hidden;
@@ -43,16 +49,36 @@ html .flavor-graph {
 }
 
 .flavor-graph-bg {
-  padding: 4em 3em 4em 2em;
+  height: 450px;
+  border-radius: 0 0 10px 0;
+  background: lighten($curious-blue, 30%);
+  margin-top: 10px;
+  .sidebar {
+    background: $curious-blue;
+    width: 20%;
+    height: 100%;
+    float: left;
+    position: relative;
+    h3 {
+      transform: rotate(-90deg);
+      color: lighten($curious-blue, 30%);
+      text-align: left;
+      position: absolute;
+      top: 60px;
+      left: -30px;
+      font-size: 3em;
+      width: 300px;
+    }
+  }
 }
 
 .flavor-graph {
   width: 100%;
   text-align: center;
-  height: 450px;
   text-align: center;
   position: relative;
   color: white;
+
 }
 .drop {
   background: $orange;
