--- a/app/views/whisky_templates/show.html.erb
+++ b/app/views/whisky_templates/show.html.erb
@@ -5,7 +5,7 @@
       <div>
 
           <div class="profile-buttons">
-            <a class="btn btn-default" href="/">&laquo; Back to Search</a>
+            <a class="btn btn-default pull-left" href="/">&laquo; Back to Search</a>
             <button class="btn btn-default pull-right">Add to favorites</button>
           </div>
 
