--- a/app/views/producer_templates/show.html.erb
+++ b/app/views/producer_templates/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row profile-upper">
     <div class="col-sm-4 info">
       <div class="profile-buttons">
-        <a class="btn btn-default" href="/">&laquo; Back to list</a>
+        <a class="btn btn-default pull-left" href="/">&laquo; Back to list</a>
         <a class="btn btn-default pull-right" href="/">Add to Favorites</a>
       </div>
       <div class="info-text">
