--- a/app/views/whisky_templates/show.html.erb
+++ b/app/views/whisky_templates/show.html.erb
@@ -26,7 +26,7 @@
 
   <div class="row">
     <div class="col-sm-12 data-table">
-      <h3>Deals on Bowmore Whisky</h3>
+      <h3>Deals on {{whisky.producer.name}} Whisky</h3>
       <table class="table table-hover">
         <thead>
           <th>Region</th>
